test/compilable/invariant_mut.d
class A
{
    int x;
    invariant() { x = 42; }
}
