test/fail_compilation/objc/objc_string.d

extern (Objective-C)
class A {}

A a = "hello";